--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,13 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@esbuild/darwin-arm64": "^0.27.3",
     "@prisma/client": "^6.3.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "esbuild": "^0.27.3",
     "express": "^4.21.2",
     "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.2",
