--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,9 @@ jobs:
           script: |
             cd elementos-10.0/
             git pull origin main
-            npm install
             npx prisma generate client
+            cd backend/
+            npm install
             npm run build
             pm2 describe auction-backend || pm2 start dist/index.js --name auction-backend
             pm2 restart auction-backend
