--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,11 +20,17 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd elementos-10.0/
-            git pull origin main
-            npx prisma generate client
-            cd backend/
-            npm install
-            npm run build
-            pm2 describe auction-backend || pm2 start dist/index.js --name auction-backend
-            pm2 restart auction-backend
+              export NVM_DIR="$HOME/.nvm"
+              [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+              nvm use 24
+
+              cd elementos-10.0/
+              git pull origin main
+
+              cd backend/
+              npm install
+              npx prisma generate
+              npm run build
+
+              pm2 describe auction-backend || pm2 start dist/index.js --name auction-backend
+              pm2 restart auction-backend
