--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
 
               cd elementos-10.0/
               git pull origin main
-              
+
               npx prisma generate
 
               cd backend/
@@ -35,3 +35,9 @@ jobs:
 
               pm2 describe auction-backend || pm2 start dist/index.js --name auction-backend
               pm2 restart auction-backend
+
+              cd ..
+              cd frontend/
+              npm install
+              npm run build
+
